# CryptoAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  start.bat  test_agent.py  test_tools.py
alembic/: env.py
alembic/versions/: 62267c53d18d_create_prices_table.py
app/: config.py  db.py
app/agents/: insight_agent.py  schema.py  tools.py
app/context/: embedding.py
app/etl/: __main__.py  fetch_coingecko.py  load_prices.py
app/ml/: __init__.py  forecasting.py
app/prompts/: insight_prompt.py  insight_prompt.txt
app/ui/: app_streamlit.py  dashboard.py  health.py
tests/: __init__.py  test1.py  test_eval.py
